--- a/src/App.css
+++ b/src/App.css
@@ -1,77 +1,29 @@
-.box {
-  border: 0px solid black;
-  display: flex;
-  flex-direction: column;
-  border-radius: 15px;
+.box{
+  
   width: fit-content;
-  margin: 150px auto;
-  padding: 30px;
-  background-color: rgb(11, 53, 237);
-}
-
-.smallBox{
-  margin-bottom: 15px;
-  width: 250px;
-  display: flex;
-  flex-direction: column;
+  margin: 250px auto;
+  text-align: center;
   color: white;
 }
 
-#gneder{
-  width:70px;
-}
-
-#btn{
-  color:rgb(14, 13, 13);
-  background-color: rgb(85, 236, 120);
+.btn{
+  padding: 5px 15px 5px 15px;
+  margin-inline: 25px;
+  margin-top: 20px;
+  border-radius: 5px;
   font-weight: bold;
-  width: 150px;
-  height: 30px;
-  border-radius: 6px;
-  margin: 0px auto;
-  margin-top: 25px;
+  background-color: rgb(228, 228, 70);
+  border: 1px solid rgb(228, 228, 70);
+  cursor: pointer;
+  color: blue;
 }
 
-#btn:hover{
-  background-color: rgb(216, 214, 79);
-  color: rgb(15, 12, 12);
+.btn:hover{
+  background-color: rgb(133, 211, 16);
+  border: 1px solid red;
 }
 
-#checkBox{
-  margin-top: 10px;
-}
-
-
-#uploadPreview{
-   width: 150px;
-   height: 150px;
-   border: 1px solid black;
-   border-radius: 150px;
-}
-
-#imgBox{
-  display: flex;
-  flex-direction: column;
-  margin: 0px auto;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-.inputs{
-  border: 0.4px solid white;
-  padding: 2px;
-  border-radius: 2px;
-}
-
-.atr{
-  color:white;
+#num{
+  font-size: 80px;
   font-weight: bold;
-}
-.gen{
-  color: black;
-  background-color: white;
-}
-
-#profile{
-   margin-bottom:10px ;
 }
