--- a/src/App.css
+++ b/src/App.css
@@ -1,41 +1,40 @@
-.box{
-    margin-block: 10%;
-    margin-inline: auto;
-    border: 4px solid rgb(211, 18, 18);
-    border-block: 2px;
-    width: fit-content;
-    height: fit-content;
-    text-align: center;
+.box {
+  width : 48%;
+  margin: 22vh auto;
+  padding:10px;
+  text-align: center;
+  align-items: center;
+  background-color: white;
+  border-radius:2vh;
+  border: 3px solid rgb(40, 193, 40);
+  box-shadow: 20px black;
 }
 
-.heading {
-    display: flex;
-    background-color: rgb(151, 5, 5);
-    font-weight: bold;
-    align-items: center;
-    color: white;
-    height: 25px;
-    justify-content: center;
+#smallBox{
+  display: flex;
+  margin-block: 4vh;
+  
 }
 
-.inputx {
-    padding: 3px;
-    margin: 19.5px;
-    text-align: center;
-    border: 2px solid black
+#urlHeading{
+  font-size: 5vh;
+  font-weight: bold;
+  color: #1d7c14;
 }
 
-#btn {
-    background-color: green;
-    color: white;
-    font-weight: bold;
-    text-align: center;
-    border: 1px solid red;
-    border-radius: 5px;
-    padding: 5px 15px;
-    cursor: pointer;
+#btn{
+  margin-left: 15px;
 }
 
-#btn:hover {
-    background-color: rgb(133, 9, 145);
+#btnCopy{
+  margin-left: 15px;
+}
+
+#shortUrl{
+  border: 1px solid white;
+  margin-bottom: 3vh;
+}
+
+#longUrl{
+  border: 1px solid rgb(40, 193, 40);
 }
