--- a/src/App.css
+++ b/src/App.css
@@ -1,40 +1,22 @@
-.box {
-  width : 48%;
-  margin: 22vh auto;
-  padding:10px;
-  text-align: center;
-  align-items: center;
-  background-color: white;
-  border-radius:2vh;
-  border: 3px solid rgb(40, 193, 40);
-  box-shadow: 20px black;
+.app {
+   height: 100vh;
 }
 
-#smallBox{
-  display: flex;
-  margin-block: 4vh;
-  
+.sections {
+   width: 100%;
+   height: calc(100vh - 70px);
+   background-color: lightpink;
+   position: relative;
+   top: 70px;
+   scroll-behavior: smooth;
+   scroll-snap-type: y mandatory;
 }
-
-#urlHeading{
-  font-size: 5vh;
-  font-weight: bold;
-  color: #1d7c14;
+.sections::-webkit-scrollbar{
+   display: none;
 }
-
-#btn{
-  margin-left: 15px;
-}
-
-#btnCopy{
-  margin-left: 15px;
-}
-
-#shortUrl{
-  border: 1px solid white;
-  margin-bottom: 3vh;
-}
-
-#longUrl{
-  border: 1px solid rgb(40, 193, 40);
+.sections>* {
+   height: 33rem;  /* calc(100vh - 50px); */
+   /* border: 2px solid black; */
+   /* scroll-snap-align: start; */
+   
 }
