--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,7 @@
-.app {
-   height: 100vh;
+#input{
+   margin-bottom: 2rem;
 }
 
-.sections {
-   width: 100%;
-   height: calc(100vh - 50px);
-   position: relative;
-   top: 70px;
-   scroll-behavior: smooth;
-   scroll-snap-type: y mandatory;
-}
-
-.sections::-webkit-scrollbar{
-   display: none;
-}
-
-.sections>* {
-   height: calc(100vh - 50px);  /* calc(100vh - 50px); */
-   /* border: 2px solid black; */
-   /* scroll-snap-align: start; */
-   
+#bigBox{
+   margin: 2rem 1rem;
 }
